--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Annabelle’s Teaching Portfolio — Project Showcase</title>
+  <title>Annabelle’s Teaching Portfolio — Resources</title>
   <link rel="stylesheet" href="style.css"/>
   <script defer src="textsize.js"></script>
 </head>
@@ -17,9 +17,9 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="teaching.html">Teaching Practice</a></li>
-            <li class="current"><a href="projects.html">Project Showcase</a></li>
+            <li><a href="projects.html">Project Showcase</a></li>
             <li><a href="workedsamples.html">Samples of Work</a></li>
-            <li><a href="resources.html">Resources</a></li>
+            <li class="current"><a href="resources.html">Resources</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -38,32 +38,33 @@
         </header>
 
         <section class="section">
-          <h1>Project Showcase</h1>
-          <p>Below are some projects I have completed during my teaching and design degree.</p>
+          <h1>Resources</h1>
+          <p>Materials collected during professional experience: sample PowerPoints, lesson handouts, worksheets, and student folios.</p>
+          <p>Use and adapt these resources to support your own teaching materials.</p>
 
           <div class="posts">
             <article>
-              <a class="image" href="#">
-                <img src="images/phonebox.png" alt="Stage 4 phone box"/>
+              <a class="image" href="docs/filing-in-metal.pdf" target="_blank" rel="noopener">
+                <img src="images/posterthumb.png" alt="Thumbnail for filing poster"/>
               </a>
-              <h3>Stage 4 Timber Project</h3>
-              <p>A phone box using hand tools to construct the box and a laser cutter to engrave designs on plastic.</p>
+              <h3>Stage 4 Wood Work – Metal</h3>
+              <p>Filing poster</p>
             </article>
 
             <article>
-              <a class="image" href="#">
-                <img src="images/heirloomBox.png" alt="Heirloom box"/>
+              <a class="image" href="docs/stage6-foodmanufacturering-notes.pdf" target="_blank" rel="noopener">
+                <img src="images/notes-thumbnails.png" alt="Thumbnail for Stage 6 Food Tech notes"/>
               </a>
-              <h3>Stage 5 Timber Project</h3>
-              <p>An heirloom box with mitred corners and veneer design—suitable for a Year 10 project.</p>
+              <h3>Stage 6 Food Technology</h3>
+              <p>Syllabus Notes: HSC Course Topic</p>
             </article>
 
             <article>
-              <a class="image" href="#">
-                <img src="images/lamp.png" alt="Timber lamp design"/>
+              <a class="image" href="docs/food-stage5.pdf" target="_blank" rel="noopener">
+                <img src="images/foodtechthumb.png" alt="Thumbnail for Stage 5 Food Tech sample"/>
               </a>
-              <h3>Timber Lamp Design Project</h3>
-              <p>A lamp designed and created within a university unit, exploring form, joinery, and finish.</p>
+              <h3>Stage 5 Food Technology</h3>
+              <p>Sample for upcoming assessment</p>
             </article>
           </div>
         </section>
