--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Annabelle’s Teaching Portfolio — Samples of Work</title>
+  <title>Annabelle’s Teaching Portfolio — Resume</title>
   <link rel="stylesheet" href="style.css"/>
   <script defer src="textsize.js"></script>
 </head>
@@ -18,9 +18,9 @@
             <li><a href="about.html">About</a></li>
             <li><a href="teaching.html">Teaching Practice</a></li>
             <li><a href="projects.html">Project Showcase</a></li>
-            <li class="current"><a href="workedsamples.html">Samples of Work</a></li>
+            <li><a href="workedsamples.html">Samples of Work</a></li>
             <li><a href="resources.html">Resources</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li class="current"><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -38,15 +38,15 @@
         </header>
 
         <section class="section">
-          <h1>Samples of Student Work</h1>
-          <p>These are samples of work I have collected from placement over the course of my degree.</p>
+          <h1>Resume</h1>
+          <p>This document provides an overview of my professional and teaching experience to date.</p>
 
-          <h3>Stage 6 Design &amp; Technology</h3>
-          <p>All students completing the <strong>Stage 6 Design and Technology</strong> course produce a Management Folio documenting their design process and production journey for the HSC Major Project.</p>
-          <p>The folio includes the <em>design brief, research, resource planning, prototyping, evaluation</em>, and <em>final reflection</em>—evidence of critical thinking, problem-solving, and project management aligned to NESA requirements.</p>
-          <p>Example reference folio:</p>
-          <p><a href="docs/stage6folio.pdf" target="_blank" rel="noopener">📄 Download Example Stage 6 Folio (DOCX)</a></p>
-          <p><em>Note:</em> For educational reference only—adapt to reflect your own project ideas, research, and development process.</p>
+          <figure>
+            <a href="docs/resume.pdf" download="Resume.pdf" type="application/pdf" aria-label="Download Resume PDF">
+              <img src="images/resume-thumb.png" alt="Thumbnail of Resume PDF" width="300" loading="lazy">
+            </a>
+            <figcaption>Download <strong>Resume</strong> (PDF)</figcaption>
+          </figure>
         </section>
 
         <footer id="footer">
