--- a/about.html
+++ b/about.html
@@ -1,31 +1,111 @@
-<!--Navigational Menu-->
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="teaching.html">Teaching Practice</a></li>
-        <li><a href="projects.html">Project Showcase</a></li>
-        <li><a href="workedsamples.html">Samples of Work</a></li>
-        <li><a href="contact.html">Contact</a></li>
-     </ul>
-</nav>
-
- <!--This is the main heading of my page -->
-<h1 style="font-family: cursive;" style="font-size: x-large;">My Teaching Portfolio</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Annabelle's Teaching Portfolio — About</title>
+  <link rel="stylesheet" href="style.css"/>
+  <script defer src="textsize.js"></script>
+</head>
 <body>
-    <!--This is the sub heading of my page in the hotpink colour-->
-    <h2 style="color: hotpink;";>About Me</h2>
-    <!--This is the image I created in canva of me-->
-    <img src="Images/profile-circle-AY.png">
-    <!--This is my teaching philosophy section where I talk more about myself-->
-    <h3 style="color: hotpink;", style="font-size: larger;">Teaching Philosophy</h3>
-    <h4 style="color: hotpink;",style="font-size: large;", style="color: hotpink;">Teaching Background</h4>
-    <!--These are my two paragraphs where I go into detail about me-->
-    <p style="font-size: medium;">I am currently in my third year at <a href="https://www.acu.edu.au/">Australian Catholic University (ACU)</a>, undertaking a double degree: a Bachelor of Secondary Education alongside a Bachelor of Arts in Design Technologies and Innovations. My major area of study is Industrial Technology (timber and metal), with a minor in Food Technology. Throughout my studies, I have completed two teaching practicum placements that have been invaluable in developing my practical teaching skills in real classroom settings—first at Cecil Hills High School in Cecil Hills, and then at Fairvale High School in Fairfield West.</p>
-    <!--This is my professional summary-->
-    <h5 style="font-size: large;">Professional Summary</h5>
-    <ul style="font-size: medium;">
-        <li>Pre-service secondary teacher in third year of Bachelor of Secondary Education/Bachelor of Arts at ACU.</li>
-        <li>Successfully completed three teaching placements across both practical and theory-based Timber and Food Technology classes.</li>
-        <li>Dedicated to creating inclusive, supportive, and engaging learning environments.</li>
-    </ul>
+  <div id="wrapper">
+    <!-- LEFT: Sidebar -->
+    <aside id="sidebar">
+      <div class="inner">
+        <nav id="menu" aria-label="Primary">
+          <h2>Menu</h2>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li class="current"><a href="about.html">About</a></li>
+            <li><a href="teaching.html">Teaching Practice</a></li>
+            <li><a href="projects.html">Project Showcase</a></li>
+            <li><a href="workedsamples.html">Samples of Work</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
+
+    <!-- RIGHT: Main -->
+    <main id="main">
+      <div class="inner">
+        <header id="header">
+          <a href="index.html" class="logo"><strong>Annabelle’s Teaching Portfolio</strong></a>
+          <div class="text-size-toolbar" role="group" aria-label="Text size controls">
+            <button class="text-size-btn" id="decreaseText" aria-label="Decrease text size">A−</button>
+            <button class="text-size-btn" id="increaseText" aria-label="Increase text size">A+</button>
+          </div>
+        </header>
+
+        <section>
+          <header class="main">
+            <h1>About Me</h1>
+          </header>
+
+          <div class="profile">
+            <div class="col-8">
+              <h2>Professional Background</h2>
+              <p>
+                I am currently studying a <strong>Bachelor of Secondary Teaching (Design and Innovation)</strong> at ACU.
+                My major focus is in <em>Industrial Technology and Design and Technology</em>, where I am developing both
+                practical and theoretical skills to apply in future teaching contexts.
+              </p>
+              <p>
+                Throughout my studies, I have gained experience in technology, design, and innovation, with an emphasis on
+                creative problem-solving and hands-on learning. I’m passionate about inspiring students through design
+                thinking, digital technologies, and innovative teaching strategies that prepare them for a changing world.
+              </p>
+            </div>
+            <div class="profile-photo">
+              <img src="images/profile-circle-AY.png" alt="Profile photo of Annabelle Youkhana"/>
+            </div>
+          </div>
+        </section>
+
+        <section>
+          <header class="major">
+            <h2>My Teaching Experience</h2>
+          </header>
+          <p>I have taught many technology and design-focused subjects in high schools. These are my main teaching areas:</p>
+          <span class="image fit">
+            <img src="images/teaching-areas.png" alt="Infographic of teaching areas: Digital Technologies, Computing Technologies, Design & Technology, Industrial Technology"/>
+          </span>
+        </section>
+
+        <section>
+          <header class="major">
+            <h3>Practicum Placement Overview</h3>
+          </header>
+          <div class="table-wrapper">
+            <table>
+              <thead>
+                <tr>
+                  <th>School</th>
+                  <th>Subjects Taught</th>
+                  <th>Year Level</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr><td>Cecil Hills High School</td><td>Stage 4 Multimedia</td><td>Year 8</td></tr>
+                <tr><td>Cecil Hills High School</td><td>Stage 5 Industrial Technology Timber</td><td>Year 9</td></tr>
+                <tr><td>Cecil Hills High School</td><td>Stage 6 Design and Technology</td><td>Year 11</td></tr>
+                <tr><td>Fairvale High School</td><td>Stage 4 Food Technology</td><td>Year 7</td></tr>
+                <tr><td>Fairvale High School</td><td>Stage 4 Textiles</td><td>Year 8</td></tr>
+                <tr><td>Fairvale High School</td><td>Stage 5 Food Technology</td><td>Year 9</td></tr>
+                <tr><td>Fairvale High School</td><td>Stage 5 Textiles</td><td>Year 10</td></tr>
+                <tr><td>Fairvale High School</td><td>Stage 5 Food Technology</td><td>Year 10</td></tr>
+              </tbody>
+            </table>
+          </div>
+        </section>
+
+        <footer id="footer">
+          <p class="copyright">&copy; 2025 Annabelle Youkhana. All rights reserved.</p>
+        </footer>
+      </div>
+    </main>
+  </div>
+</body>
+</html>
