--- a/teaching.html
+++ b/teaching.html
@@ -1,108 +1,69 @@
-<!--Navigational Menu-->
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="teaching.html">Teaching Practice</a></li>
-        <li><a href="projects.html">Project Showcase</a></li>
-        <li><a href="workedsamples.html">Samples of Work</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
-    <!--This is my teaching philosophy section-->
-    <h1 style="color:rgb(229, 101, 186);">My Teaching Philosophy</h1>
-    <p>Across my placements, I have taken pride in developing lessons that are practical, creative, and responsive to the needs of different learners and school contexts. I seek out opportunities to make Industrial Technology, Food Technologies, Design and Technology, and Textiles engaging by connecting classroom projects to real-world applications. From guiding students through timber projects that move from initial sketches to final products, to teaching essential food preparation skills, I aim to ensure learning is hands-on, relevant, and motivating. These experiences have allowed me to refine my ability to plan, deliver, and reflect on lessons that not only build technical competence but also nurture student confidence and a genuine enthusiasm for learning.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Annabelle's Teaching Portfolio — Teaching Practice</title>
+  <link rel="stylesheet" href="style.css"/>
+  <script defer src="textsize.js"></script>
+</head>
+<body>
+  <div id="wrapper">
+    <aside id="sidebar">
+      <div class="inner">
+        <nav id="menu" aria-label="Primary">
+          <h2>Menu</h2>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="current"><a href="teaching.html">Teaching Practice</a></li>
+            <li><a href="projects.html">Project Showcase</a></li>
+            <li><a href="workedsamples.html">Samples of Work</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
 
-    <h2 style="color: hotpink;"> <em>My Favourite Educational Quote</em></h2>
-    <!--This is the quote I designed in canva-->
-    <p>One of my favourite quotes is by Tom Bodett: “School teaches you lessons and then gives you a test. Life gives you a test that teaches you lessons.” I connect with this deeply because it reminds me that true learning doesn’t stop at the classroom door—it continues through challenges, mistakes, and real-world experiences. For me, this reinforces the importance of preparing students not just with knowledge, but with the resilience and adaptability to face whatever life puts in front of them. I want my students to leave my classes with confidence in their skills, an ability to reflect and grow from challenges, and a genuine sense that their learning belongs to them beyond school.</p>
-    <img src="Images/quote.png", style="width: 500px;">
+    <main id="main">
+      <div class="inner">
+        <header id="header">
+          <a href="index.html" class="logo"><strong>Annabelle’s Teaching Portfolio</strong></a>
+          <div class="text-size-toolbar" role="group" aria-label="Text size controls">
+            <button class="text-size-btn" id="decreaseText" aria-label="Decrease text size">A−</button>
+            <button class="text-size-btn" id="increaseText" aria-label="Increase text size">A+</button>
+          </div>
+        </header>
 
-    <style>
-        table {
-            width:100%;
-            border-collapse: collapse;
-            margin-top: 10px;
-            font-family: Arial, Helvetica, sans-serif;
-        }
+        <section class="section">
+          <h1>Teaching Practice</h1>
+          <h2>Core Beliefs</h2>
+          <p>As a future teacher, I am committed to creating engaging and supportive classrooms where students feel inspired to explore, design, and innovate.</p>
+          <p>I believe learning should be inclusive and accessible, providing every student the opportunity to succeed and develop confidence. I combine practical, hands-on projects with critical thinking so students see real-world value.</p>
+          <p>Through exploring materials, technologies, and creative processes, I nurture curiosity, problem-solving, and resilience. My goal is to help students become independent learners who can adapt their skills to a changing world.</p>
+          <p>Ultimately, I want students to see themselves as capable designers and innovators who can make meaningful impact.</p>
+        </section>
 
-        th, td {
-            border: 1px solid #ccc;
-            padding: 10px 12px;
-            text-align: left;
-        }
+        <section class="section">
+          <h2>My Teaching Philosophy</h2>
+          <p>Across my placements I develop lessons that are practical, creative, and responsive to different learners and contexts. I connect Industrial Technology, Food Tech, D&amp;T and Textiles to real-world applications—from timber projects that move from sketches to products, to essential food preparation skills. I plan, deliver, and reflect on lessons that build technical competence, confidence, and enthusiasm.</p>
 
-        thead {
-            background-color: #f0f0f0;
-        }
+          <h2><em>My Favourite Educational Quote</em></h2>
+          <p>Tom Bodett: “School teaches you lessons and then gives you a test. Life gives you a test that teaches you lessons.” This reminds me that learning continues through challenges and real-world experiences. I want students to leave with confidence, reflection skills, and resilience.</p>
 
-        th {
-            color: #333;
-            font-weight: bold;
-        }
+          <span class="image fit">
+            <img src="images/teaching-areas.png" alt="Teaching areas graphic"/>
+          </span>
+        </section>
 
-        tr:nth-child(even) {
-            background-color: #fafafa;
-        }
+        <footer id="footer">
+          <p class="copyright">&copy; 2025 Annabelle Youkhana. All rights reserved.</p>
+        </footer>
+      </div>
+    </main>
+  </div>
+</body>
+</html>
 
-        h2 {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 1.4rem;
-            margin-bottom: 8px;
-            color: #2c3e50;
-        }
-    </style>
-    <!--This is the table of my placement overview-->
-    <h3>Practicum Placement Overview</h3>
-    <table>
-        <thead>
-            <tr>
-                <th>School</th>
-                <th>Subjects Taught</th>
-                <th>Year Level</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td> Cecil Hills High School </td>
-                <td>Stage 4 Multi Media </td>
-                <td>Year 8</td>
-            </tr>
-            <tr>
-                <td>Cecil Hills High School</td>
-                <td>Stage 5 Industrial Technology Timber</td>
-                <td>Year 9</td>
-            </tr>
-            <tr>
-                <td>Cecil Hills High School</td>
-                <td>Stage 6 Design and Technology </td>
-                <td>Year 11</td>
-            </tr>
-            <tr>
-                <td>Fairvale Highschool </td>
-                <td>Stage 4 Food Technology </td>
-                <td>Year 7</td>
-            </tr>
-            <tr>
-                <td> Fairvale Highschool </td>
-                <td>Stage 4 Textiles </td>
-                <td>Year 8</td>
-            </tr>
-            <tr>
-                <td>Fairvale Highschool</td>
-                <td>Stage 5 Foodtechnolgy </td>
-                <td>Year 9</td>
-            </tr>
-            <tr>
-                <td>Fairvale Highschool</td>
-                <td>Stage 5 Textiles </td>
-                <td>Year 10</td>
-            </tr>
-            <tr>
-                <td>Fairvale Highschool </td>
-                <td>Stage 5 Food Technology</td>
-                <td>Year 10</td>
-            </tr>
-            
-        </tbody>
-    </table>
